Reduced icon size and spacing between tabs. Fixed text alignment.

--- a/popup/tabfind.css
+++ b/popup/tabfind.css
@@ -83,7 +83,7 @@ body.wide {
 #tabs-list li {
 	position: relative;
 	display: block;
-	padding: 5px;
+	padding: 3px;
 	padding-left: 10px;
 }
 
@@ -99,25 +99,26 @@ body.wide {
 /* LI Image */
 #tabs-list li img {
 	margin-right: 5px;
+	margin-top: 5px;
 }
 
 #tabs-list.small li img {
-	width: 22px;
-	height: 22px;
+	width: 12px;
+	height: 12px;
 }
 #tabs-list.medium li img {
-	width: 26px;
-	height: 26px;
+	width: 16px;
+	height: 16px;
 }
 #tabs-list.large li img {
-	width: 30px;
-	height: 30px;
+	width: 20px;
+	height: 20px;
 }
 
 /* LI Context */
 #tabs-list li span {
 	display: inline-block;
-	vertical-align: text-bottom;
+	vertical-align: middle;
 	white-space: nowrap; 
 	overflow: hidden;
 	text-overflow: ellipsis;
